Configurando webpack y cambiando nombre de folder

--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "description": "Forkify project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development",
+    "build": "webpack --mode production"
   },
   "author": "Mario Arturo Serrano Flores",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^4.28.4"
+    "webpack": "^4.28.4",
+    "webpack-cli": "^3.2.1"
   },
   "dependencies": {}
 }
